--- a/scores.html
+++ b/scores.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container white z-depth-4 ">
         <h2 class="row s12 center-align">High Scores</h2>
-        <ol class="row" id="score-display"></ol>
+        <ol class="row center-align" id="score-display"></ol>
         <div class="row center-align" id="button-wrapper" style="padding-bottom: 10px;">
             <a href="index.html" class="btn blue center-align">Restart</button></a>
             <button class="btn red" id="reset-scores">Reset Scores</button>
