--- a/scores.html
+++ b/scores.html
@@ -29,7 +29,7 @@
         </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="scores.js"></script>
+    <script src="./assets/js/scores.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 
